# RAG_parser

./: .env_template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
core/: RagContext.py  __init__.py  pipeline.py  registry.py  segment.py
core/services/: __init__.py  document_ingestion.py  qa_service.py  vector_store.py
docs/: hybrid_pdf_parser.md
examples/: demo_parse.py
output/: __init__.py  schema.json  writer.py
parsers/: __init__.py  abstract_document_parser.py  base_parser.py  docx_parser.py  ocr_parser.py  pdf_parser.py  pptx_parser.py  xlsx_parser.py
tests/: test_docx.py  test_pdf.py  test_pipeline.py  test_pptx.py  test_xlsx.py
utils/: __init__.py  chunking.py  cleaning.py  file_utils.py  formatting.py  logger.py  prompts.py
